# resultsdb

./: .arcconfig  .arclint  .gitignore  .taskotron_task_dockerbuild.json  APIDOCS.apiary  Dockerfile  MANIFEST.in  Makefile  Makefile.cfg  README.md  alembic.ini  entrypoint.sh  get-version.sh  init_db.sh  migration.sh  pyproject.toml  requirements.txt  resultsdb.spec  run_cli.py  runapp.py  setup.py  tox-podman.sh  tox.ini  wsgi.py
.github/workflows/: resultsdb.yaml
.s2i/: environment
alembic/: env.py
alembic/versions/: 17ec41bd6e9a_added_uuid_column_to_the_job_table.py  433d0b5b3b96_added_index_on_the_keyval_store.py  4ace44a44bf_change_index_on_result_data_so_like_can_.py  540dbe71fa91_change_schema_to_v2_0_step_1.py  978007ecd2b_changed_testcase_name_to_text.py  dbfab576c81_change_schema_to_v2_0_step_2.py
conf/: fedora-messaging-example.toml  oauth2_client_secrets.json.example  resultsdb.conf  resultsdb.wsgi  settings.py.example
openshift/: Dockerfile  README.md  resultsdb-test-template.yaml  run_app.sh
resultsdb/: .gitignore  __init__.py  __main__.py  authorization.py  cli.py  config.py  messaging.py  proxy.py  tracing.py
resultsdb/alembic/: env.py
resultsdb/alembic/versions/: 153c416322c2_create_indexes_on_foreign_keys.py  15f5eeb9f635_initial_revision.py  17ec41bd6e9a_added_uuid_column_to_the_job_table.py  34760e10040b_add_aborted_outcome.py  433d0b5b3b96_added_index_on_the_keyval_store.py  4ace44a44bf_change_index_on_result_data_so_like_can_.py  4bf1390f06d1_added_index_on_submit_time.py  4dbe714897fe_remove_the_user_model.py  540dbe71fa91_change_schema_to_v2_0_step_1.py  978007ecd2b_changed_testcase_name_to_text.py  cd581d0e83df_change_outcome_from_enum_to_string.py  dbfab576c81_change_schema_to_v2_0_step_2.py
resultsdb/controllers/: admin.py  api_v1.py  api_v2.py  api_v3.py  common.py  login_page.py  main.py
resultsdb/lib/: helpers.py
resultsdb/models/: __init__.py  results.py  user.py
resultsdb/parsers/: api_v2.py  api_v3.py
resultsdb/serializers/: __init__.py  api_v1.py  api_v2.py
resultsdb/static/css/: style.css
resultsdb/templates/: _formhelpers.html  api_v3.html  index.html  layout.html  login.html
resultsdb/templates/admin/: index.html
testing/: __init__.py  conftest.py  functest_api.py  functest_api_v10.py  functest_api_v20.py  functest_create_fedmsg.py  functest_duplicate_result.py  test_api_v3.py  test_app.py  test_general.py  test_helpers.py
