[tool.poetry]
name = "resultsdb"
version = "2.2.0"
description = "The test results store engine for (not only) Fedora QA tools"
authors = [
  "Red Hat, Inc. and others"
]
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/release-engineering/resultsdb"
homepage = "http://docs.resultsdb20.apiary.io/"

include = [
    "LICENSE",
    "README.md",
    "alembic.ini",
    "tox.ini",
    "resultsdb/templates/*",
    "resultsdb/static/*",
    "resultsdb/alembic/*",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
flask = "^2.3.1"
gunicorn = "^20.1.0"
fedora-messaging = "^3.4.1"
"stomp.py" = "^8.1.0"

flake8 = {version = "^6.0.0", optional = true}
pytest = {version = "^7.2.0", optional = true}
pytest-cov = {version = "^4.0.0", optional = true}
tox = {version = "^4.4.8", optional = true}
tox-docker = {version = "^4.0.0", optional = true}

Flask-SQLAlchemy = "^3.0.3"
SQLAlchemy = {version = "^2.0.17"}
psycopg2-binary = {version = "^2.9.3"}
alembic = "^1.11.1"
iso8601 = "^1.0.2"
Flask-Pydantic = "^0.11.0"

email-validator = "^2.0.0"
python-ldap = "^3.4.3"
Flask-pyoidc = "^3.13.0"
Flask-Session = "^0.5.0"

[tool.poetry.extras]
test = [
    "flake8",
    "pytest",
    "pytest-cov",
    "tox",
    "tox-docker",
]

[tool.poetry.scripts]
resultsdb = "resultsdb.__main__:cli"

[tool.poetry.plugins."resultsdb.messaging.plugins"]
dummy = "resultsdb.messaging:DummyPlugin"
fedmsg = "resultsdb.messaging:FedmsgPlugin"
stomp = "resultsdb.messaging:StompPlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
