[tool.poetry]
name = "resultsdb"
version = "2.2.0"
description = "The test results store engine for (not only) Fedora QA tools"
authors = [
  "Red Hat, Inc. and others"
]
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/release-engineering/resultsdb"
homepage = "http://docs.resultsdb20.apiary.io/"

include = [
    "LICENSE",
    "README.md",
    "alembic.ini",
    "tox.ini",
    "resultsdb/templates/*",
    "resultsdb/static/*",
    "resultsdb/alembic/*",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
flask = "^2.3.3"
gunicorn = "^21.2.0"
fedora-messaging = "^3.4.1"
"stomp.py" = "^8.1.0"

pytest = {version = "^7.4.4", optional = true}
pytest-cov = {version = "^4.0.0", optional = true}
tox = {version = "^4.11.4", optional = true}
tox-docker = {version = "^4.0.0", optional = true}

Flask-SQLAlchemy = "^3.1.1"
SQLAlchemy = {version = "^2.0.22"}
psycopg2-binary = {version = "^2.9.7"}
alembic = "^1.12.1"
iso8601 = "^2.1.0"
pydantic = "^1.10.12"
Flask-Pydantic = "^0.11.0"

email-validator = "^2.1.0"
python-ldap = "^3.4.3"
Flask-pyoidc = "^3.14.0"
# dependency of Flask-pyoidc;
# oic-1.6.1 is compatible only with pydantic 2
# whereas Flask-Pydantic needs older versions
oic = {version = "<=1.6.0", optional = true}
Flask-Session = "^0.5.0"
# Flask-Session seems to be incompatible with werkzeug-3.0.0
werkzeug = "<3.0.0"

# tracing support
opentelemetry-exporter-otlp = "^1.21.0"
opentelemetry-instrumentation = "^0.42b0"
opentelemetry-instrumentation-flask = "^0.42b0"
opentelemetry-instrumentation-sqlalchemy = "^0.42b0"
opentelemetry-instrumentation-requests = "^0.42b0"

[tool.poetry.extras]
test = [
    "pytest",
    "pytest-cov",
    "tox",
    "tox-docker",
]

[tool.poetry.scripts]
resultsdb = "resultsdb.__main__:cli"

[tool.poetry.plugins."resultsdb.messaging.plugins"]
dummy = "resultsdb.messaging:DummyPlugin"
fedmsg = "resultsdb.messaging:FedmsgPlugin"
stomp = "resultsdb.messaging:StompPlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
