[tool.poetry]
name = "resultsdb"
version = "2.2.0"
description = "The test results store engine for (not only) Fedora QA tools"
authors = [
  "Red Hat, Inc. and others"
]
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/release-engineering/resultsdb"
homepage = "http://docs.resultsdb20.apiary.io/"

include = [
    "LICENSE",
    "README.md",
    "alembic.ini",
    "tox.ini",
    "resultsdb/templates/*",
    "resultsdb/static/*",
    "resultsdb/alembic/*",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
flask = "^3.0.1"
gunicorn = "^21.2.0"
fedora-messaging = "^3.4.1"
"stomp.py" = "^8.1.0"

pytest = {version = "^8.0.2", optional = true}
pytest-cov = {version = "^4.0.0", optional = true}
tox = {version = "^4.13.0", optional = true}
tox-docker = {version = "^4.0.0", optional = true}

Flask-SQLAlchemy = "^3.1.1"
SQLAlchemy = {version = "^2.0.24"}
psycopg2-binary = {version = "^2.9.7"}
alembic = "^1.13.1"
iso8601 = "^2.1.0"
pydantic = "^2.6.3"
Flask-Pydantic = "^0.11.0"

email-validator = "^2.1.1"
python-ldap = "^3.4.3"
Flask-pyoidc = "^3.14.0"
# dependency of Flask-pyoidc;
# oic-1.6.1 is compatible only with pydantic 2
# whereas Flask-Pydantic needs older versions
oic = {version = "<=1.6.0", optional = true}
Flask-Session = "^0.6.0"

# tracing support
opentelemetry-exporter-otlp = "^1.23.0"
opentelemetry-instrumentation = "^0.44b0"
opentelemetry-instrumentation-flask = "^0.44b0"
opentelemetry-instrumentation-sqlalchemy = "^0.44b0"
tenacity = "^8.2.3"

[tool.poetry.extras]
test = [
    "pytest",
    "pytest-cov",
    "tox",
    "tox-docker",
]

[tool.poetry.scripts]
resultsdb = "resultsdb.__main__:cli"

[tool.poetry.plugins."resultsdb.messaging.plugins"]
dummy = "resultsdb.messaging:DummyPlugin"
fedmsg = "resultsdb.messaging:FedmsgPlugin"
stomp = "resultsdb.messaging:StompPlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
